--- a/index.html
+++ b/index.html
@@ -18,28 +18,29 @@
     <header class="main-header">
         <div class="container">
             <a href="#inicio" class="logo-link">
-                <img src="imagens/logo-tecflex.png" alt="Logo da Tec Flex">
+                <img src="imagens/logo-tecflex.svg" alt="Logo da Tec Flex">
             </a>
             <nav class="main-nav">
                 <ul>
                     <li><a href="#inicio">Início</a></li>
                     <li><a href="#servicos">Serviços</a></li>
-                    <li><a href="#contato">Contato</a></li>
+                    <li><a href="#contato-secao">Contato</a></li>
                 </ul>
             </nav>
-            <a href="#contato" class="btn btn-header">Fale Conosco</a>
+            <a href="#contato-secao" class="btn btn-header">Fale Conosco</a>
         </div>
     </header>
 
     <main>
         <section id="inicio" class="hero-section" role="banner" aria-label="Banner principal da Tec Flex">
+            <div class="hero-background"></div>
             <div class="hero-overlay"></div>
             <div class="container hero-content">
                 <h1 class="hero-title">A Precisão que sua Produção Exige</h1>
                 <p class="hero-subtitle">Venda e Assistência Técnica Especializada em Máquinas de Costura Industrial</p>
                 <div class="hero-buttons">
                     <a href="#servicos" class="btn btn-primary">Nossos Serviços</a>
-                    <a href="#contato" class="btn btn-secondary">Pedir Orçamento</a>
+                    <a href="#contato-secao" class="btn btn-secondary">Pedir Orçamento</a>
                 </div>
             </div>
             <a href="#diferenciais" class="scroll-down-arrow" aria-label="Rolar para baixo">
@@ -96,6 +97,57 @@
             </div>
         </section>
 
+        <section id="contato-secao" class="contact-section reveal">
+            <div class="container">
+                <div class="section-title">
+                    <h2>Entre em Contato</h2>
+                    <p>Estamos prontos para atender você. Envie sua mensagem ou venha nos visitar.</p>
+                </div>
+                <div class="contact-wrapper">
+                    <div class="contact-form">
+                        <h3>Envie uma Mensagem</h3>
+                        <form action="#">
+                            <div class="form-group">
+                                <label for="name">Nome</label>
+                                <input type="text" id="name" name="name" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="email">E-mail</label>
+                                <input type="email" id="email" name="email" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="subject">Assunto</label>
+                                <input type="text" id="subject" name="subject">
+                            </div>
+                            <div class="form-group">
+                                <label for="message">Mensagem</label>
+                                <textarea id="message" name="message" rows="5" required></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Enviar</button>
+                        </form>
+                    </div>
+                    <div class="contact-info">
+                        <h3>Nossas Informações</h3>
+                        <div class="info-item">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <p>Av. Santos Dumont, 565<br>Criciúma - SC, CEP 88804-500</p>
+                        </div>
+                        <div class="info-item">
+                            <i class="fas fa-phone"></i>
+                            <p>(48) 3478-3803</p>
+                        </div>
+                        <div class="info-item">
+                            <i class="fas fa-envelope"></i>
+                            <p>tecflexaparelhos@hotmail.com</p>
+                        </div>
+                        <div class="contact-map">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3503.931131103722!2d-49.40019238491882!3d-28.57183198244247!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x952182315a63962b%3A0x7395741755a5223a!2sAv.%20Santos%20Dumont%2C%20565%20-%20S%C3%A3o%20Luiz%2C%20Crici%C3%BAma%20-%20SC%2C%2088804-500!5e0!3m2!1spt-BR!2sbr!4v1672951523456!5m2!1spt-BR!2sbr" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <footer id="contato" class="main-footer">
@@ -103,7 +155,7 @@
             <div class="footer-content">
                 <div class="footer-about">
                     <div class="logo-footer">
-                        <img src="imagens/logo-tecflex.png" alt="Logo TecFlex">
+                        <img src="imagens/logo-tecflex-branco.png" alt="Logo TecFlex em versão branca">
                     </div>
                     <p>Compromisso com a qualidade e a eficiência da sua produção.</p>
                 </div>
@@ -112,7 +164,7 @@
                     <ul>
                         <li><a href="#inicio">Início</a></li>
                         <li><a href="#servicos">Serviços</a></li>
-                        <li><a href="#contato">Contato</a></li>
+                        <li><a href="#contato-secao">Contato</a></li>
                     </ul>
                 </div>
                 <div class="footer-contact">
@@ -123,7 +175,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Tec Flex. Todos os direitos reservados.</p>
+                <p>&copy; 2025 TecFlex. Todos os direitos reservados.</p>
             </div>
         </div>
     </footer>
