add pagina contatos e repaginação

--- a/contato.html
+++ b/contato.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TecFlex - Venda e Assistência de Máquinas de Costura</title>
+    <title>Contato - Tec Flex</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;800&display=swap" rel="stylesheet">
@@ -32,72 +32,7 @@
     </header>
 
     <main>
-        <section id="inicio" class="hero-section" role="banner" aria-label="Banner principal da Tec Flex">
-            <div class="hero-background"></div>
-            <div class="hero-overlay"></div>
-            <div class="container hero-content">
-                <h1 class="hero-title">A Precisão que sua Produção Exige</h1>
-                <p class="hero-subtitle">Venda e Assistência Técnica Especializada em Máquinas de Costura Industrial</p>
-                <div class="hero-buttons">
-                    <a href="#servicos" class="btn btn-primary">Nossos Serviços</a>
-                    <a href="contato.html" class="btn btn-secondary">Pedir Orçamento</a>
-                </div>
-            </div>
-            <a href="#diferenciais" class="scroll-down-arrow" aria-label="Rolar para baixo">
-                <i class="fas fa-chevron-down"></i>
-            </a>
-        </section>
-
-        <section id="diferenciais" class="stats-section reveal">
-            <div class="container">
-                <div class="stat-item">
-                    <h3 class="stat-number">+15</h3>
-                    <p class="stat-label">Anos de Experiência</p>
-                </div>
-                <div class="stat-item">
-                    <h3 class="stat-number">+1000</h3>
-                    <p class="stat-label">Máquinas Atendidas</p>
-                </div>
-                <div class="stat-item">
-                    <h3 class="stat-number">+1000</h3>
-                    <p class="stat-label">Máquinas Vendidas</p>
-                </div>
-            </div>
-        </section>
-
-        <section id="servicos" class="services-section reveal">
-            <div class="container">
-                <div class="section-title">
-                    <h2>Nossos Serviços</h2>
-                    <p>Soluções completas em venda, assistência e manutenção de máquinas de costura para todos os portes.</p>
-                </div>
-                <div class="services-grid">
-                    <div class="service-card">
-                        <div class="service-icon">
-                            <i class="fa-solid fa-cart-shopping"></i>
-                        </div>
-                        <h3>Venda de Máquinas</h3>
-                        <p>Ampla variedade de máquinas de costura industriais e domésticas, novas e usadas para todas as necessidades.</p>
-                    </div>
-                    <div class="service-card">
-                        <div class="service-icon">
-                            <i class="fa-solid fa-screwdriver-wrench"></i>
-                        </div>
-                        <h3>Assistência Técnica</h3>
-                        <p>Nossos técnicos são qualificados para diagnóstico, reparo e manutenção preventiva de todas as marcas.</p>
-                    </div>
-                    <div class="service-card">
-                        <div class="service-icon">
-                            <i class="fa-solid fa-gears"></i>
-                        </div>
-                        <h3>Peças e Acessórios</h3>
-                        <p>Fornecemos peças de reposição originais e acessórios para garantir a durabilidade do seu equipamento.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-        
-        <section id="contato-secao" class="contact-section reveal">
+        <section id="contato-secao" class="contact-section">
             <div class="container">
                 <div class="section-title">
                     <h2>Entre em Contato</h2>
@@ -147,7 +82,6 @@
                 </div>
             </div>
         </section>
-
     </main>
 
     <footer class="main-footer">
@@ -163,7 +97,7 @@
                     <h4>Navegação</h4>
                     <ul>
                         <li><a href="index.html">Início</a></li>
-                        <li><a href="#servicos">Serviços</a></li>
+                        <li><a href="index.html#servicos">Serviços</a></li>
                         <li><a href="contato.html">Contato</a></li>
                     </ul>
                 </div>
